--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "caniuse-db": "1.0.30000060",
     "chai": "^2.1.1",
     "css-loader": "0.9.1",
+    "eslint": "^0.19.0",
+    "eslint-plugin-react": "^2.1.0",
     "file-loader": "0.8.1",
     "grunt-grizzly": "git://github.com/gooddata/grunt-grizzly.git",
     "html-webpack-plugin": "1.1.0",
