--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "webpack-dev-server": "1.7.0"
   },
   "dependencies": {
+    "flux": "^2.0.1",
     "react": "^0.13.0",
     "react-bootstrap": "^0.20.0",
     "react-router": "^0.13.0"
