--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "flux": "^2.0.1",
     "react": "^0.13.0",
     "react-bootstrap": "^0.20.0",
-    "react-router": "^0.13.0"
+    "react-router": "^0.13.0",
+    "react-spinkit": "^1.0.2"
   }
 }
